@@ -14,6 +14,10 @@ Soviet:
 - Conscript sandbag construction time 80s -> 100s
 - Conscript mid range accuracy increased 0.35 -> 0.39
 - Conscript build time reduced 25s -> 22s
+- B4 damage increased 350 -> 450
+- B4 aoe equalized for all barrage types
+- B4 direct fire range increased 90 -> 110
+- B4 cost fuel cost reduced 120 -> 105
 
 Ostheer:
 - Panzerschrek damage decreased 150 -> 140
